starlark_syntax/src/syntax/grammar_tests/error_bad_load.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
load()

Error:
error: Parse error: unexpected symbol ')' here, expected one of "STRING"
 --> error_bad_load:1:6
  |
1 | load()
  |      ^
  |


Program:
load(123)

Error:
error: Parse error: unexpected integer literal '123' here, expected one of "STRING"
 --> error_bad_load:1:6
  |
1 | load(123)
  |      ^^^
  |


Program:
load("foo.bzl")

Error:
error: `load` statement requires at least two arguments
 --> error_bad_load:1:6
  |
1 | load("foo.bzl")
  |      ^^^^^^^^^
  |


Program:
load("", 1)

Error:
error: Parse error: unexpected integer literal '1' here, expected one of ")", "IDENTIFIER" or "STRING"
 --> error_bad_load:1:10
  |
1 | load("", 1)
  |          ^
  |


Program:
load(1, 2)

Error:
error: Parse error: unexpected integer literal '1' here, expected one of "STRING"
 --> error_bad_load:1:6
  |
1 | load(1, 2)
  |      ^
  |


Program:
load("a", x)

Error:
error: Parse error: unexpected symbol ')' here, expected one of "="
 --> error_bad_load:1:12
  |
1 | load("a", x)
  |            ^
  |


Program:
load("a", x2=x)

Error:
error: Parse error: unexpected identifier 'x' here, expected one of "STRING"
 --> error_bad_load:1:14
  |
1 | load("a", x2=x)
  |              ^
  |
